--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,9 +20,9 @@ init:
 install:
   - ren "C:\Program Files\Git\usr\bin\sh.exe" _sh.exe
   - cmd: |
-      C:\msys64\usr\bin\bash.exe -lc 'sed -i s/^CheckSpace/#CheckSpace/g /etc/pacman.conf && pacman --noconfirm -Syuu --overwrite *'
+      C:\msys64\usr\bin\bash.exe -lc "sed -i s/^CheckSpace/#CheckSpace/g /etc/pacman.conf && pacman --noconfirm -Syuu --overwrite *"
       C:\windows\system32\taskkill.exe /F /FI "MODULES eq msys-2.0.dll"
-      C:\msys64\usr\bin\bash.exe -lc 'pacman --noconfirm -Suu --overwrite *'
+      C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suu --overwrite *"
   - ps: |	
       if ($env:platform -Match "i686") 	
       {	
@@ -36,20 +36,20 @@ install:
       }
   - cmd: |
       cd c:/projects/gdl
-      c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD && ./.ci/build_gdl_windows.msys'
+      c:/msys64/usr/bin/bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys"
       if %errorlevel% neq 0 exit /b %errorlevel%
 
 build_script:
   - cmd: |
       cd c:/projects/gdl
-      c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD && ./.ci/build_gdl_windows.msys build'
+      c:/msys64/usr/bin/bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys build"
       if %errorlevel% neq 0 exit /b %errorlevel%
 
 on_failure:
   - ps: cat c:\projects\gdl\build\testsuite\Testing\Temporary\LastTest.log
 
 after_build:
-  - cmd: c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD && ./.ci/build_gdl_windows.msys test'
+  - cmd: c:/msys64/usr/bin/bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys test"
   - ps: |
       copy C:\msys64\$env:mname\bin\*.dll install\bin\
       copy mingw\$env:mname\bin\*.dll install\bin\
