--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,12 +20,12 @@ init:
 install:
   - ren "C:\Program Files\Git\usr\bin\sh.exe" _sh.exe
   - cmd: |
-      C:\msys64\usr\bin\bash.exe -lc "sed -i s/^CheckSpace/#CheckSpace/g /etc/pacman.conf && pacman --noconfirm -Syuu --overwrite *"
+      C:\msys64\usr\bin\bash.exe -lc "sed -i s/^CheckSpace/#CheckSpace/g /etc/pacman.conf && pacman --noconfirm -Syuu --overwrite \*"
       C:\windows\system32\taskkill.exe /F /FI "MODULES eq msys-2.0.dll"
-      C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suu --overwrite *"
+      C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -Suu --overwrite \*"
   - cmd: |
-      if %platform% == i686 C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S --needed --overwrite git base-devel binutils mingw-w64-i686-toolchain"
-      if %platform% == x86_64 C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S --needed --overwrite git base-devel binutils mingw-w64-x86_64-toolchain"
+      if %platform% == i686 C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S --needed --overwrite \* git base-devel binutils mingw-w64-i686-toolchain"
+      if %platform% == x86_64 C:\msys64\usr\bin\bash.exe -lc "pacman --noconfirm -S --needed --overwrite \* git base-devel binutils mingw-w64-x86_64-toolchain"
   - cmd: |
       cd C:\projects\gdl
       C:\msys64\usr\bin\bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys"
