--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,8 +44,8 @@ build_script:
       cd C:\projects\gdl
       C:\msys64\usr\bin\bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys build"
 
-on_failure:
-  - ps: cat C:\projects\build\testsuite\Testing\Temporary\LastTest.log
+#on_failure:
+#  - ps: cat C:\projects\build\testsuite\Testing\Temporary\LastTest.log
 
 after_build:
   - cmd: |
@@ -54,8 +54,8 @@ after_build:
   - cmd: |
       cd C:\projects\install
       7z a ..\gdl\gdl_build.zip *
-      C:\msys64\usr\bin\bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys pack" & exit 0
       cd C:\projects\gdl
+      C:\msys64\usr\bin\bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys pack" & exit 0
       copy C:\projects\package\gdlsetup.exe .
 
 artifacts:
