--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI  ANTLR=yes
     - os: osx
+      osx_image: xcode10.2
       env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=MINI
 
 #    - os: linux
@@ -15,6 +16,7 @@ matrix:
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
     - os: osx
+      osx_image: xcode10.2
       env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
 
 #    - os: linux
@@ -22,6 +24,7 @@ matrix:
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
     - os: osx
+      osx_image: xcode10.2
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
 
     - os: linux
@@ -29,6 +32,7 @@ matrix:
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
     - os: osx
+      osx_image: xcode10.2
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=FULL
 
 before_install:
