--- a/.travis.yml
+++ b/.travis.yml
@@ -256,7 +256,7 @@ install:
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo apt-get install --no-install-recommends -y $APT_PACKAGES; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then for pkg in $BREW_PACKAGES; do echo brew \"$pkg\" >> Brewfile; done; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cat Brewfile; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew bundle; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then brew bundle --verbose; fi
     - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'osx' ]]; then python3 -m pip install --upgrade --no-deps --force-reinstall numpy; fi
 
 script:
