--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI  ANTLR=yes
     - os: osx
-      osx_image: xcode10.2
+      osx_image: xcode11.3
       env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=MINI
 
 #    - os: linux
@@ -16,7 +16,7 @@ matrix:
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
     - os: osx
-      osx_image: xcode10.2
+      osx_image: xcode11.3
       env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
 
 #    - os: linux
@@ -24,7 +24,7 @@ matrix:
     - os: linux
       env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
     - os: osx
-      osx_image: xcode10.2
+      osx_image: xcode11.3
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
 
     - os: linux
@@ -32,7 +32,7 @@ matrix:
 #    - os: linux
 #      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
     - os: osx
-      osx_image: xcode10.2
+      osx_image: xcode11.3
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=FULL
 
 before_install:
@@ -256,8 +256,8 @@ install:
     - if [[ $DEPS == 'FULL' && $TRAVIS_OS_NAME == 'osx' ]]; then python3 -m pip install --upgrade --no-deps --force-reinstall numpy; fi
 
     # pytest
-    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} python3-pytest"; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then python3 -m pip install pytest; fi 
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export sudo apt-get install --no-install-recommends -y python3-pytest"; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then python3 -m pip install pytest; fi
 
 script:
     # antlr
