Try out Gilles' suggestion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -303,6 +303,14 @@ endif(PNGLIB)
 # openmp
 # -DOPENMP=ON|OFF
 if(OPENMP)
+  if(APPLE)
+    if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+      set(OpenMP_C_FLAG "-fopenmp=libomp -Wno-unused-command-line-argument")
+    endif()
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+      set(OpenMP_CXX_FLAG "-fopenmp=libomp -Wno-unused-command-line-argument")
+    endif()
+  endif()
   find_package(OpenMP QUIET)
   set(USE_OPENMP ${OPENMP_FOUND})
   if(OPENMP_FOUND)
