add self signed signatures for windows exe

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,10 +23,12 @@ install:
       if ($env:platform -Match "i686") 
       {
         $env:MSYSTEM="MINGW32" ; $env:mname="mingw32" ; $env:arch="i686"
+        $env:SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x86\signtool.exe"
       }
       elseif ($env:platform -Match "x86_64") 
       {
         $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
+        $env:SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\signtool.exe"
       }
   - cmd: |
       C:\msys64\usr\bin\bash.exe -lc "sed -i s/^CheckSpace/#CheckSpace/g /etc/pacman.conf && pacman --noconfirm -Syuu --overwrite \*"
@@ -51,11 +53,19 @@ after_build:
   - cmd: |
       cd C:\projects\gdl
       C:\msys64\usr\bin\bash.exe -lc "cd $OLDPWD && ./.ci/build_gdl_windows.msys check" & exit 0
+  - ps: |
+      Add-Type -AssemblyName 'System.Web'
+      $env:rawpwd = [System.Web.Security.Membership]::GeneratePassword(100, 50)
+      $cert = New-SelfSignedCertificate -DnsName gnudatalanguage.github.io -CertStoreLocation cert:\LocalMachine\My -type CodeSigning
+      $pwd = ConvertTo-SecureString -String "$env:rawpwd" -Force -AsPlainText
+      Export-PfxCertificate -cert $cert -FilePath C:\projects\gdlcert.pfx
   - cmd: |
       cd C:\projects\install
+      "%SIGNTOOL%" sign /f C:\projects\gdlcert.pfx /p "%rawpwd%" gdl.exe
       7z a ..\gdl\gdl_build.zip *
       cd C:\projects\gdl
       copy C:\projects\package\gdlsetup.exe .
+      "%SIGNTOOL%" sign /f C:\projects\gdlcert.pfx /p "%rawpwd%" gdlsetup.exe
 
 artifacts:
   - path: gdl_build.zip
