enabled everything (except grib)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1016,20 +1016,9 @@ if(EXPAT)
   endif(EXPAT_FOUND)
 endif(EXPAT)
 # X11
-if(X11)
-    set(CMAKE_PREFIX_PATH ${X11DIR})
-    if(WIN32 AND NOT CYGWIN)
-        find_package(Xportmingw QUIET)
-        set(HAVE_X ${XPORTMINGW_FOUND})
-        set(USE_X ${XPORTMINGW_FOUND})
-        if(XPORTMINGW_FOUND)
-            set(LIBRARIES ${LIBRARIES} ${XPORTMINGW_LIBRARIES})
-            include_directories(${XPORTMINGW_INCLUDE_DIR})
-        else(XPORTMINGW_FOUND)
-            message("X11 was not found.\n"
-            "Use -DX11DIR=DIR to specify the X11 directory tree.")
-        endif(XPORTMINGW_FOUND)
-    else(WIN32 AND NOT CYGWIN)
+if(CYGWIN OR NOT WIN32)
+    if(X11)
+        set(CMAKE_PREFIX_PATH ${X11DIR})
         find_package(X11 QUIET)
         set(HAVE_X ${X11_FOUND})
         set(USE_X ${X11_FOUND})
@@ -1042,8 +1031,8 @@ if(X11)
             "Use -DX11=OFF to not use it.\n"
 	    "(suitable Fedora/CentOS package xorg-x11-devel)\n")
         endif(X11_FOUND)
-    endif(WIN32 AND NOT CYGWIN)
-endif(X11)
+    endif(X11)
+endif(CYGWIN OR NOT WIN32)
 add_subdirectory(src)
 if(NOT PYTHON_MODULE)
     add_subdirectory(testsuite)
@@ -1155,11 +1144,9 @@ set(SHAPELIB_LIBRARIES ${SHAPELIB_LIBRARIES})
 module(SHAPELIB   "SHAPELIB      ")
 set(EXPAT_LIBRARIES ${EXPAT_LIBRARIES})
 module(EXPAT     "EXPAT         ")
-if(WIN32 AND NOT CYGWIN)
-  module(XPORTMINGW  "XPortMinGW (Win32 Xlib)       ")
-else(WIN32 AND NOT CYGWIN)
+if(CYGWIN OR NOT WIN32)
   module(X11     "Xlib          ")
-endif(WIN32 AND NOT CYGWIN)
+endif(CYGWIN OR NOT WIN32)
 module(PNGLIB    "libpng        ")
 message("")
 message(STATUS "Mandatory modules")
