--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,10 @@ init:
 install:
   - ren "C:\Program Files\Git\usr\bin\sh.exe" _sh.exe
   - ps: |
+      Start-FileDownload 'https://download.microsoft.com/download/B/2/E/B2EB83FE-98C2-4156-834A-E1711E6884FB/MSMpiSetup.exe'
+      & MSMpiSetup.exe -unattend
+      $env:Path += ";C:\Program Files\Microsoft MPI\Bin"
+  - ps: |
       if ($env:platform -Match "i686") 
       {
         $env:MSYSTEM="MINGW32" ; $env:mname="mingw32" ; $env:arch="i686"
