--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,7 @@ install:
   - ren "C:\Program Files\Git\usr\bin\sh.exe" _sh.exe
   - ps: |
       Start-FileDownload 'https://download.microsoft.com/download/B/2/E/B2EB83FE-98C2-4156-834A-E1711E6884FB/MSMpiSetup.exe'
-      & MSMpiSetup.exe -unattend
-      $env:Path += ";C:\Program Files\Microsoft MPI\Bin"
+  - MSMpiSetup.exe -unattend
   - ps: |
       if ($env:platform -Match "i686") 
       {
