--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         deps: [FULL, MINI]
-        platform: [x86_64, i686]
+        arch: [x86_64, i686]
     env:
       deps: ${{ matrix.deps }}
       platform: ${{ matrix.platform }}
@@ -25,17 +25,22 @@ jobs:
       - name: Checkout GDL
         uses: actions/checkout@v2
       - name: Build GDL
-        shell: msys2 {0}
         run: |
-          pacman --noconfirm -S --needed mingw-w64-${Platform}-toolchain
-          export ROOT_DIR=`readlink -f ${GITHUB_WORKSPACE}/..`
-          ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys prep
-          ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys build
-        env:
-          Platform: ${{ matrix.platform }}
+          if (${{ matrix.arch }} -Match "i686") 
+          {
+            $env:MSYSTEM="MINGW32" ; $env:mname="mingw32" ; $env:arch="i686"
+            $env:SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x86\signtool.exe"
+          }
+          elseif (${{ matrix.arch }} -Match "x86_64") 
+          {
+            $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
+            $env:SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\signtool.exe"
+          }
+          ${env:ROOT_DIR} = ${GITHUB_WORKSPACE}\..
+          msys2 pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-toolchain
+          msys2 ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys prep
+          msys2 ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys build
       - name: Check GDL
-        shell: msys2 {0}
-        run: ./.ci/build-gdl-windows.msys check
+        run: msys2 ./.ci/build-gdl-windows.msys check
       - name: Package GDL
-        shell: msys2 {0}
-        run: ./.ci/build-gdl-windows.msys pack
+        run: msys2 ./.ci/build-gdl-windows.msys pack
