--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,7 +36,7 @@ jobs:
             $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
             $env:SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\signtool.exe"
           }
-          ${env:ROOT_DIR} = "${{ env.GITHUB_WORKSPACE }}\.."
+          ${env:ROOT_DIR} = "${{ github.workspace }}\.."
           msys2 pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-toolchain
           msys2 ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys prep
           msys2 ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys build
