--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,21 +25,19 @@ jobs:
       - name: Checkout GDL
         uses: actions/checkout@v2
       - name: Build GDL
+        shell: msys2 {0}
         run: |
-          if ("${{ matrix.arch }}" -Match "i686") 
-          {
-            $env:MSYSTEM="MINGW32" ; $env:mname="mingw32" ; $env:arch="i686"
-            $env:SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x86\signtool.exe"
-          }
-          elseif ("${{ matrix.arch }}" -Match "x86_64") 
-          {
-            $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
-            $env:SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\signtool.exe"
-          }
-          ${env:ROOT_DIR} = "${{ github.workspace }}\.."
-          msys2 pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-toolchain
-          msys2 ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys prep
-          msys2 ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys build
+          if [ "${{ matrix.arch }}" == "i686" ]; then
+            export MSYSTEM="MINGW32"; export mname="mingw32"; export arch="i686"
+            export SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x86\signtool.exe"
+          elif [ "${{ matrix.arch }}" == "x86_64" ]; then
+            export MSYSTEM="MINGW64"; export mname="mingw64"; export arch="x86_64"
+            export SIGNTOOL="C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x64\signtool.exe"
+          fi
+          export ROOT_DIR=`cygpath ${{ github.workspace }}\\..`
+          pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-toolchain
+          ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys prep
+          ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys build
       - name: Check GDL
         run: msys2 ./.ci/build-gdl-windows.msys check
       - name: Package GDL
