--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,18 +29,20 @@ jobs:
         shell: msys2 {0}
         run: |
           export arch=${{ matrix.arch }}
-          export ROOT_DIR=`cygpath ${workspace}`
-          pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-toolchain
+          export ROOT_DIR=`cygpath ${workspace}`/..
+          pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-gcc \
+                                         mingw-w64-${{ matrix.arch }}-cmake \
+                                         mingw-w64-${{ matrix.arch }}-make
           ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys prep
           ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys build
       - name: Check GDL
         shell: msys2 {0}
         run: |
           export arch=${{ matrix.arch }}
-          export ROOT_DIR=`cygpath ${workspace}`
+          export ROOT_DIR=`cygpath ${workspace}`/..
           ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys check
       - name: Package GDL
         run: |
           export arch=${{ matrix.arch }}
-          export ROOT_DIR=`cygpath ${workspace}`
+          export ROOT_DIR=`cygpath ${workspace}`/..
           ${ROOT_DIR}/gdl/.ci/build-gdl-windows.msys pack
