--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,7 +32,8 @@ jobs:
           export ROOT_DIR=`cygpath ${workspace}`/..
           pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-gcc \
                                          mingw-w64-${{ matrix.arch }}-cmake \
-                                         mingw-w64-${{ matrix.arch }}-make
+                                         mingw-w64-${{ matrix.arch }}-make \
+                                         tar zstd
           ${ROOT_DIR}/gdl/.ci/build_gdl_windows.msys prep
           ${ROOT_DIR}/gdl/.ci/build_gdl_windows.msys build
       - name: Check GDL
